# maestro-openclaw-agent-teams

./: .env.billing.example  .env.example  .gitignore  COMMAND_CENTER.md  LICENSE_IMPLEMENTATION.md  LICENSE_SYSTEM.md  MAESTRO_SPEC.md  README.md  TASK_COMPLETE.md  conftest.py  ingest.py  pyproject.toml  requirements.txt  server.py  voice_proxy.py
agent/: AGENTS.md  IDENTITY.md  SOUL.md  USER.md
command_center_frontend/: index.html  package-lock.json  package.json  vite.config.js
docs/: README.md  api-contracts.md  architecture.md  command-center.md  operations.md  system-directives.md  troubleshooting.md
frontend/: package-lock.json  package.json
legacy/: README.md
maestro/: __init__.py  _package_imports.py  agent_role.py  billing_service.py  cli.py  command_center.py  commander_chat.py  config.py  control_plane.py  control_plane_core.py  doctor.py  fleet_constants.py  fleet_deploy.py  fleet_models.py  help_pack.py  ingest.py  install_state.py  license.py  license_service.py  loader.py  monitor.py  openclaw_guard.py  openclaw_profile.py  profile.py  purchase.py  runtime.py  server.py  server_actions.py  server_command_center.py  server_command_center_state.py  server_project_store.py  server_schedule.py  server_workspace_data.py  setup.py  setup_wizard.py  solo_cli.py  solo_license.py  system_directives.py  tools.py  update.py  (+2 more)
scripts/: build-maestro-core-wheel.sh  build-maestro-fleet-package.sh  build-maestro-pro-package.sh  check_product_boundaries.py  install-maestro-fleet-linux.sh  install-maestro-fleet-macos.sh  install-maestro-fleet-windows.ps1  (+12 more)
(+176 files in other folders)
