[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maestro-conagent-teams"
version = "0.1.0"
description = "AI that actually understands your construction plans"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.11"
authors = [
    { name = "Maestro Construction Agents" },
]

dependencies = [
    "google-genai>=1.0.0",
    "Pillow>=11.0.0",
    "python-dotenv>=1.0.0",
    "PyMuPDF>=1.25.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "watchfiles>=1.0.0",
    "httpx>=0.28.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
maestro = "maestro.cli:main"
maestro-setup = "maestro.setup:main"

[tool.hatch.build.targets.wheel]
packages = ["maestro"]

[tool.hatch.build.targets.wheel.force-include]
"agent" = "maestro/agent"
"command_center_frontend" = "maestro/command_center_frontend"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
